<resources>
    <string name="app_name">Генератор хештегов Hashtegener</string>
    <string name="textview">Результат</string>
    <string name="textviewOcenka">Оценить приложение</string>
    <string name="TextViewTema">Тематика</string>
    <string name="TextViewЛKolvo">Количество тэгов</string>
    <string name="Space">С пробелом</string>
    <string name="TextView1">Обязательные слова - напишите сами через ПРОБЕЛ</string>
    <string name="TextView2">Введите свой список слов и нажмите - сохранить</string>
    <string name="TextBox">Скопировано</string>
    <string name="TextBox2">Сохранено</string>
    <string name="button1">Генерировать</string>
    <string name="button2">Копировать</string>
    <string name="Save_button">Сохранить список</string>
    <string name="svoy_text">Пусто</string>
    <string name="close">Закрыть</string>
    <string name="closetext">Закрыто</string>
    <string name="nogti">"#японскийманикюр", "#японскийманикюрве", "#экспрессманикюр", "#шилакве", "#ценынаманикюрве", "#фасаддизайн", "#стильныеногти", "#сколькостоитманикюрве", "#сделатьногти", "#сделатьманикюрверядомсомнойнедорого", "#сделатьманикюрверядомсомной", "#сделатьманикюрве", "#праздничныйманикюрцена", "#праздничныйманикюрофициальныйсайт", "#праздничныйманикюрна", "#праздничныйманикюр", "#покрытиелака", "#пилочныйманикюр", "#ногтиставропольская", "#ногтисоскидкойна", "#ногтисоскидкойкаталогтоваров", "#ногтисоскидкой", "#ногтинадому", "#ногтие", "#ногтиа", "#ногтишеллак", "#ногтичеремушки", "#ногтицентральныйрайон", "#ногтицентргорода", "#ногтицентр", "#ногтицена", "#ногтиуральская", "#ногтиставропольская", "#ногтисормовская", "#ногтиселезнева", "#ногтисделать", "#ногтисалоны", "#ногтирядомсомной", "#ногтирядом", "#ногтирайонгидростроителей", "#ногтипашковка", "#ногтиотзывы", "#ногтинедорого", "#ногтинаращивание", "#ногтинаставропольской", "#ногтинакореновскойинстаграм", "#ногтинаклавишах", "#ногтинакарте", "#ногтинадому", "#ногтимодель", "#ногтикомсомольский", "#ногтикмр", "#ногтикарасунскийрайон", "#ногтикарасунскийокруг", "#ногтиинстаграм", "#ногтидешево", "#ногтигубернский", "#ногтигмр", "#ногтигидрострой", "#ногтигалерея", "#ногтивцентре", "#ногтиавито", "#ногти", "#ногтидешегона", "#ногтидешего", "#ногтигород", "#ногтигалерея", "#ногтиве", "#ногтейвенедорого", "#ноготочкисоскидкойна", "#ноготочкисоскидкой", "#ноготочки", "#ноготочкидешегоофициальныйсайт", "#ноготочкидешегона", "#ноготочкидешегокаталогтоваров", "#ноготочкидешего", "#новогоднийманикюрцена", "#новогоднийманикюрофициальныйсайт", "#новогоднийманикюрна", "#новогоднийманикюр", "#нарощенныеногти", "#наращиванияногтейвенедорого", "#наращиваниеногтейе", "#наращиваниеногтейцена", "#наращиваниеногтейстасова", "#наращиваниеногтейставропольская", "#наращиваниеногтейселезнева", "#наращиваниеногтейсалон", "#наращиваниеногтейрядомсомнойцены", "#наращиваниеногтейрядомсомнойнедорого", "#наращиваниеногтейрядомсомной", "#наращиваниеногтейрядом", "#наращиваниеногтейпмр", "#наращиваниеногтейпашковскийрайон", "#наращиваниеногтейпашковский", "#наращиваниеногтейпашковка", "#наращиваниеногтейнедорого", "#наращиваниеногтейнаставропольской", "#наращиваниеногтейнакарте", "#наращиваниеногтейнадому", "#наращиваниеногтейкмркомсомольский", "#наращиваниеногтейкмр", "#наращиваниеногтейкарасунскийрайон", "#наращиваниеногтейкарасунскийокруг", "#наращиваниеногтейинстаграм", "#наращиваниеногтейгмр", "#наращиваниеногтейгидрострой", "#наращиваниеногтейвосточнокругликовская", "#наращиваниеногтейавито", "#наращиваниеногтей", "#наращиваниеногтейвенаставропольской", "#наращиваниеногтейве", "#наращиваниевеногтей", "#нараститьногтинедорого", "#нараститьногти", "#нараститьногтиве", "#накладныеногти", "#мужскойманикюр", "#маникюрюмр", "#маникюрцентргорода", "#маникюрстоимостьве", "#маникюрсоскидкойул", "#маникюрсоскидкойофициальныйсайт", "#маникюрсоскидкойна", "#маникюрсоскидкой", "#маникюрсбс", "#маникюрсалон", "#маникюрпедикюр", "#маникюрнедорого", "#маникюрнаращивание", "#маникюрнаклавишахтургенева", "#маникюрнаклавишах", "#маникюрнадому", "#маникюрмужской", "#маникюркруглосуточно", "#маникюрерядомсомной", "#маникюра", "#маникюрчмр", "#маникюрчерника", "#маникюрчеремушкиинстаграм", "#маникюрчеремушки", "#маникюрценыадресарядомсомной", "#маникюрценыадресарядом", "#маникюрцены", "#маникюрцентральныйрайон", "#маникюрцентральный", "#маникюрцентркрасоты", "#маникюрцентр", "#маникюрцена", "#маникюрхорошиймастер", "#маникюрхбк", "#маникюрулицадмитриевскаядамба", "#маникюртюляева", "#маникюртабрис", "#маникюрставропольская", "#маникюрселезнева", "#маникюрсалоны", "#маникюрсалон", "#маникюррядомсомнойнедорого", "#маникюррядомсомнойнакарте", "#маникюррядомсомной", "#маникюррядом", "#маникюрроссийская", "#маникюррепина", "#маникюррейтинг", "#маникюрприкубанскийокруг", "#маникюрпанорама", "#маникюронлайнзапись", "#маникюрнедорогорядомсомной", "#маникюрнедорого", "#маникюрнакарте", "#маникюрнадому", "#маникюрмужской", "#маникюрлучшиесалоны", "#маникюрлакью", "#маникюркрасная", "#маникюркомсомольский", "#маникюркмр", "#маникюринстаграмм", "#маникюринстаграм", "#маникюригнатова", "#маникюрзаписьонлайн", "#маникюрзападныйобход", "#маникюржксимфония", "#маникюржксветлоград", "#маникюржкабрикос", "#маникюрдубинка", "#маникюрдлядетей", "#маникюрдлинные", "#маникюрдизайн", "#маникюрдешево", "#маникюрдетский", "#маникюргмр", "#маникюргидрострой", "#маникюргидростроителей", "#маникюргероевразведчиков", "#маникюргельлак", "#маникюргалерея", "#маникюрвцентре", "#маникюрблагоева", "#маникюраппаратный", "#маникюракции", "#маникюрадреса", "#маникюрадмираласеребрякова", "#маникюравито", "#маникюр24часа", "#маникюр", "#маникюркраснаяплощадь", "#маникюркореновская", "#маникюрипедикюр", "#маникюрдлядетейве", "#маникюрдешегоул", "#маникюрдешегоофициальныйсайт", "#маникюрдешего", "#маникюргидрострой", "#маникюргельлак", "#маникюргалерея", "#маникюрвеюмр", "#маникюрвечмр", "#маникюрвецены2022", "#маникюрвецены", "#маникюрвецентргорода", "#маникюрвефмр", "#маникюрвесоскидкой", "#маникюрвесделать", "#маникюрвесалоны", "#маникюрверядомсомнойнедорогосделать", "#маникюрверядомсомнойнедорого", "#маникюрверядомсомной", "#маникюрвеонлайнзапись", "#маникюрвенедорогоцентральныйрайон", "#маникюрвенедорогоприкубанскийокруг", "#маникюрвенедорого", "#маникюрвенаращивание", "#маникюрвенаставропольской", "#маникюрвенагидрострое", "#маникюрвемужчина", "#маникюрвелучшие", "#маникюрвекмр", "#маникюрвеинстаграм", "#маникюрведёшево", "#маникюрведлямужчин", "#маникюрвегидрострой", "#маникюрвегдесделать", "#маникюрвевцентре", "#маникюрвебезпосредников", "#маникюрвеавито", "#маникюрве9мая", "#маникюрве1000рублей", "#маникюрве", "#лучшийманикюр", "#лакиманикюр", "#наногти", "#маникюрзаписьонлайн", "#маникюрвцентре", "#коррекцияногтейе", "#коррекцияногтейрядомсомной", "#коррекцияногтей", "#клавишиногти", "#клавишиманикюруральская", "#клавишиманикюртургенева", "#клавишиманикюр", "#кератиновыеногти", "#картааманикюр", "#запилимманикюрставропольская", "#запилимманикюр", "#дизайнногтей", "#детскийманикюр", "#детскийманикюрве", "#гдесделатьманикюрве", "#гдевеможносделатьманикюр", "#гдеведелаютманикюр", "#бесплатныйманикюр", "#аппаратныйманикюр", "#аппаратныйманикюрве", "#авитоногти", "#авитоскийногти", "#авитонаращиваниеногтей", "#madisonманикюр", "#ibxногтей"</string>
    <string name="_10">15</string>
    <string name="blagodarit">Приложение остается бесплатным благодаря поддержке пользователей. Спасибо Вам!</string>
    <string name="blagodarit2">Вы можете поддержать приложение хорошей оценкой</string>
    <string name="blagodarit3">или пожертвовать любую доступную сумму (сколько не жалко)</string>
    <string name="blagodaritButton">Поддержать проект</string>

    <string-array name="profNames">
        <item>Ноготочки</item>
        <item>Парикмахерская</item>
        <item>Приколы</item>
        <item>Новости</item>
        <item>Свой список</item>
    </string-array>
    <string-array name="number">
        <item>30 тэгов</item>
        <item>15 тэгов</item>
        <item>20 тэгов</item>
        <item>40 тэгов</item>
    </string-array>
</resources>